--- a/css/worldwide.css
+++ b/css/worldwide.css
@@ -103,7 +103,6 @@ p {
     max-width: 150px;
 }
 
-
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -158,7 +157,7 @@ p {
     font-size: 36px;
 }
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
